# easyLua

./: .gitignore  CMakeLists.txt  README.md  win_config.bat
compat/mac/: Info.plist  mac_fileManager.h  mac_fileManager.mm
compat/win/: windows_fileManager.cpp  windows_fileManager.h
easyLua.xcodeproj/: project.pbxproj
easyLua.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
easyLua.xcodeproj/project.xcworkspace/xcuserdata/katekovanton.xcuserdatad/: UserInterfaceState.xcuserstate
easyLua/sys/: FileManger.cpp  FileManger.h  mac_fileManager.h  mac_fileManager.mm
easyLua/sys/ios/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.mm  ios_fileManager.h  ios_fileManager.mm  main.m
easyLua/sys/mac/: AppDelegate.h  AppDelegate.m  Main.storyboard  ViewController.h  ViewController.mm  main.m
easyLua/usageSample/: UsageSample.cpp  UsageSample.hpp
easyLua/usageSample/SampleObjects/: House.cpp  House.hpp  Person.hpp
easyLua/usageSample/ScriptProxies/: ScriptProxy_House.cpp  ScriptProxy_House.hpp  ScriptProxy_Person.cpp
easyLua/usageSample/Scripts/: eventDispatcher.lua  testMatch.lua  testScript.lua
easyLua/usageSample/Scripts/Quests/: questExtensions.lua  questLogic.lua
easyLua/usageSample/Scripts/Utils/: base.lua  class.lua  eventDispatcher.lua
easyLua/utils/: BinaryReader.cpp  BinaryReader.h  ByteBuffer.cpp  ByteBuffer.h  Geometry.h  Log.cpp  Log.hpp
easyLua/vendors/lua/: lbaselib.c  loadlib.c  loslib.c  lua.hpp
easyLua/wrapper/: LUAContext.cpp  LUAContext.hpp  LUAContextDataSource.hpp  LUAScriptDataSource.cpp  LUAScriptDataSource.hpp
easyLuaLib/sys/: FileManger.cpp  FileManger.h
easyLuaLib/utils/: BinaryReader.cpp  BinaryReader.h  ByteBuffer.cpp  ByteBuffer.h  Geometry.h  Log.cpp  Log.hpp
easyLuaLib/vendors/lua/: lcorolib.c  linit.c  liolib.c  lstrlib.c  lua.h
easyLuaLib/vendors/luaBridge/detail/: Namespace.h  Userdata.h
easyLuaSample/: UsageSample.cpp  UsageSample.hpp  main.cpp
easyLuaSample/Resources/Scripts/Quests/: questExtensions.lua  questLogic.lua
easyLuaSample/Resources/Scripts/Utils/: base.lua
easyLuaSample/SampleObjects/: House.cpp  House.hpp  Person.cpp  Person.hpp
easyLuaSample/ScriptProxies/: ScriptProxy_House.cpp  ScriptProxy_Person.cpp  ScriptProxy_Person.hpp
easyLuaSample/Scripts/: eventDispatcher.lua
easyLuaSample/wrapper/: LUAContext.cpp  LUAContext.hpp  LUAContextDataSource.hpp  LUAScriptDataSource.cpp  LUAScriptDataSource.hpp  lua.hpp
